# exai-cmake

./: CMakeLists.txt  ReadMe.md  exai-cmake-config.cmake  nyu-cmake-config.cmake  vcpkg.json
cmake/: exai-test.cmake  exai-verilog.cmake  nyu-test.cmake  nyu-verilog.cmake
